src/patternfly/components/Card/card.scss
/* ... */
.pf-c-card__header {
  display: flex;
  flex-direction: row;
  align-items: center;

  .pf-c-card__title {
    --pf-c-card--first-child--PaddingTop: 0;
    --pf-c-card__title--not--last-child--PaddingBottom: 0;

    padding: 0;
  }

  &.pf-m-toggle-right {
    --pf-c-card__header-toggle--MarginRight: var(--pf-c-card__header--m-toggle-right--toggle--MarginRight);
    --pf-c-card__header-toggle--MarginLeft: var(--pf-c-card__header--m-toggle-right--toggle--MarginLeft);

    .pf-c-card__actions {
      --pf-c-card__header-toggle--MarginRight: var(--pf-c-card__header--m-toggle-right--actions--MarginRight);
    }

    .pf-c-card__header-toggle {
      order: 2;
    }

    .pf-c-card__title {
      flex: 1;
    }
  }
}

.pf-c-card__header-toggle {
  align-self: flex-start;
  margin: var(--pf-c-card__header-toggle--MarginTop) var(--pf-c-card__header-toggle--MarginRight) var(--pf-c-card__header-toggle--MarginBottom) var(--pf-c-card__header-toggle--MarginLeft);
}

.pf-c-card__header-toggle-icon {
  display: inline-block;
  transition: var(--pf-c-card__header-toggle-icon--Transition);
}

.pf-c-card__title {
  font-family: var(--pf-c-card__title--FontFamily);
  font-size: var(--pf-c-card__title--FontSize);
  font-weight: var(--pf-c-card__title--FontWeight);
}

.pf-c-card__actions {
  display: flex;
  align-items: center;
  align-self: flex-start;
  order: 1;
  padding-left: var(--pf-c-card__actions--PaddingLeft);
  margin: var(--pf-c-card__header-toggle--MarginTop) var(--pf-c-card__header-toggle--MarginRight) var(--pf-c-card__header-toggle--MarginBottom) auto;

  > * + * {
    margin-left: var(--pf-c-card__actions--child--MarginLeft);
  }

  + .pf-c-card__title,
  + .pf-c-card__body,
  + .pf-c-card__footer {
    padding: 0;
  }

  &.pf-m-no-offset {
    --pf-c-card__header-toggle--MarginTop: 0;
    --pf-c-card__header-toggle--MarginBottom: 0;
  }
}

.pf-c-card__header,
.pf-c-card__title,
.pf-c-card__body,
.pf-c-card__footer {
  padding-right: var(--pf-c-card--child--PaddingRight);
  padding-bottom: var(--pf-c-card--child--PaddingBottom);
  padding-left: var(--pf-c-card--child--PaddingLeft);

  &:first-child {
    padding-top: var(--pf-c-card--first-child--PaddingTop);
  }
}

.pf-c-card__header,
.pf-c-card__title {
  &:not(:last-child) {
    padding-bottom: var(--pf-c-card__title--not--last-child--PaddingBottom);
  }
}

.pf-c-card__expandable-content {
  --pf-c-card--first-child--PaddingTop: 0;
}

.pf-c-card__body:not(.pf-m-no-fill) {
  flex: 1 1 auto;
}

.pf-c-card__body {
  font-size: var(--pf-c-card__body--FontSize);
}

.pf-c-card__footer {
  font-size: var(--pf-c-card__footer--FontSize);
}

// RedHat Font overrides
@include pf-m-overpass-font {
  .pf-c-card .pf-c-card__title {
    font-weight: var(--pf-global--FontWeight--normal);
  }
}

